[package]
name = "hyper_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
pretty_env_logger = "0.4.0"
rustls = "0.20.3"
tokio = { version = "1", features = ["full"] }
